<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:background="@color/black"
        tools:context=".ui.activity.MainActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/buttonCheckOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvYourShoppingCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/work_sans_medium"
                    android:letterSpacing="0"
                    android:text="@string/your_shopping_cart"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cartRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tvYourShoppingCart"
                    tools:listitem="@layout/item_shopping_cart" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@color/black_33"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cartRecyclerView"
                    app:strokeColor="@android:color/transparent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPriceTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="@string/price"
                            android:textColor="@color/grey_shade"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDeliveryChargesTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="@string/delivery_charge"
                            android:textColor="@color/grey_shade"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvPriceTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCouponDiscountTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="Coupon Discount"
                            android:textColor="@color/grey_shade"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryChargesTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTaxTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="@string/tax"
                            android:textColor="@color/grey_shade"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCouponDiscountTitle" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="₹ 1299"
                            android:textColor="@color/white_FE"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvPriceTitle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tvPriceTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDeliveryCharges"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="Free"
                            android:textColor="@color/white_FE"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvDeliveryChargesTitle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tvDeliveryChargesTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvMinus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="-"
                            android:textColor="@color/white_FE"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvCouponDiscountTitle"
                            app:layout_constraintEnd_toStartOf="@+id/tvCouponDiscount"
                            app:layout_constraintTop_toTopOf="@+id/tvCouponDiscountTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCouponDiscount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="₹ 0"
                            android:textColor="@color/white_FE"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvCouponDiscountTitle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tvCouponDiscountTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="₹ 192"
                            android:textColor="@color/white_FE"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvTaxTitle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tvTaxTitle" />


                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/ic_view_divider"
                            app:layout_constraintTop_toBottomOf="@+id/tvTaxTitle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTotalTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="@string/total"
                            android:textColor="@color/white_FE"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/work_sans_regular"
                            android:letterSpacing="0"
                            android:text="₹ 2500 "
                            android:textColor="@color/sea_green"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCheckOut"
            style="@style/MaterialButtonView"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradient_button_checkout"
            android:text="@string/proceed_to_checkout"
            android:fontFamily="@font/work_sans_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmptyMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/work_sans_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="16sp"
            android:visibility="gone"
            android:text="@string/your_shopping_card_is_empty"
            android:textColor="@color/white_FE"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>